tests/snapshots/examples_fixtures/type_system__failing__74_hm_index_non_indexable_compile_mismatch.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/74_hm_index_non_indexable_compile_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Type Mismatch

I found a type mismatch.

  examples/type_system/failing/74_hm_index_non_indexable_compile_mismatch.flx:29:5
   |
29 |     x[0]
   |     ^
   |     - this expression has type `Int`

   |     - indexed value is known at compile time

Note:
  expected type: indexable value (Array/List/Tuple/Map)
  found type: Int

Help:
  These two types are not compatible.
  index only arrays, lists, tuples, or maps
== stdout ==
<not executed>
